# mirrorOS

./: .eslintrc.js  .gitignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  commands.rs  globals.rs  main.rs  modules.rs
src-tauri/src/api/: api_client.rs
src-tauri/src/models/: command_result.rs  email.rs  mod.rs  request.rs  weather.rs
src-tauri/src/module/: email.rs
src-tauri/src/modules/: email.rs
src-tauri/src/modules/email/: client.rs  command.rs  config_example.rs  mod.rs
src-tauri/src/utils/: logger.rs
src/assets/styles/: index.scss
src/config/: config_example.ts  traffic_config_helper.ts
src/core/: index.ts  ipc_channel.ts  ipc_event.ts
src/lib/: Module.vue
src/modules/email/: channels.ts  index.ts
src/types/: command_result.d.ts  email_channel.d.ts  mirror_config.d.ts  mirror_ui_module.d.ts
