[package]
name = "mirror-os"
version = "0.0.0"
description = "Smart Mirror OS"
authors = ["Bence Markus"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
imap = "2.4.1"
native-tls = "0.2.11"
chrono = "0.4.26"
reqwest = "0.11.18"
env_logger = "0.7"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
